@@ -1,3 +1,226 @@
+12/6/08
+------Blackrock Depths------
+[Add] Detention Block
+[Add] Blackrock Depths
+[Add] Ring of the Law
+[Add] East Garrison
+[Add] Shrine of Thaurissan
+[Add] The Domicile
+[Add] The Black Vault
+[Add] Hall of Crafting
+[Add] Dark Iron Highway
+[Add] West Garrison
+[Add] The Manufactory
+[Add] The Grim Guzzler
+[Add] Chamber of Enchantment
+[Add] Mold Foundry
+[Add] Summoners' Tomb
+[Add] The Lyceum
+[Add] The Iron Hall
+[Add] The Imperial Seat
+
+------Blackrock Spire - Upper------
+[Add] Blackrock Stadium
+[Add] Hall of Blackhand
+[Add] The Furnace
+[Add] Spire Throne"]
+[Add] Dragonspire Hall
+[Add] Hall of Binding - Entrance
+[Add] The Rookery
+
+------Blackrock Spire - Lower------
+[Add] Chamber Of battle
+[Add] Halycon's Lair
+[Add] Hordemar City - Entrance
+[Add] Hordemar City - Lower
+[Add] Mok'Doom
+[Add] Skitterweb Tunnels
+[Add] The Storehouse
+[Add] Tazz'Alaor
+
+------Blackwing Lair------
+[Add] Dragonmaw Garrison
+[Add] Shadow Wing Lair
+[Add] Halls of Strife
+[Add] Blackwing Lair
+[Add] Nefarians Lair
+
+------The Deadmines------
+[Add] Mast Room
+[Add] Goblin Foundry
+[Add] Iceclad Cove
+[Add] Boat - Edwin VanCleef
+
+------Molten Core------
+[Add] Magmadar Cavern
+[Add] Ragnaros' Lair
+
+------Naxxramas------
+[Add] Kel'Thuzad Chamber
+
+------Scholomance------
+[Add] The Reliquary
+[Add] Chamber of Summoning
+[Add] The Great Ossuary
+[Add] The Viewing Room
+[Add] The Laboratory
+
+------Gnomeregan------
+[Add] Gnomeregan Train Depot
+[Add] The Hall of Gears
+[Add] The Hall of Gears - Bottom
+[Add] The Clean Zone
+[Add] The Dormitory
+[Add] Launch Bay
+[Update] Gnomeregan Train Depot
+
+------Karazhan------
+[Add] The Gatehouse
+[Add] Livery Stables
+[Add] The Scullery
+[Add] The Banquet Hall
+[Add] The Grand Ballroom
+[Add] The Opera Hall
+[Add] The Celestial Watch
+[Add] Guardian's Library
+[Add] The Menagerie
+[Add] The Broken Stair
+[Add] The Guest Chambers
+[Add] Servents' Quarters
+
+------Scarlet Monastery Armory------
+[Add] Training Ground
+[Add] Footman's Armory
+[Add] Crusader's Armory
+[Add] Hall Of Champions
+
+------Scarlet Monastery Cathedral------
+[Add] Chapel Gardens
+[Add] Crusader's Chapel
+
+------Scarlet Monastery Graveyard------
+[Add] Chamber of Atonement
+[Add] Forlorn Cloister
+[Add] Honor's Tomb
+
+------Scarlet Monastery Library------
+[Add] Huntsman's Cloister
+[Add] Gallery of Treasures
+[Add] Athenaeum
+
+------Stratholme------
+[Add] Elders' Square
+[Add] The Gauntlet
+[Add] Slaughter Square
+[Add] The Slaughter House
+[Add] Festival Lane
+[Add] Market Row
+[Add] Crusaders' Square
+[Add] The Scarlet Bastion
+[Add] The Crimson Throne
+[Add] The Hoard
+[Add] King's Square
+
+------Temple of Atal'Hakkar------
+[Add] The Pit of Refuse
+[Add] The Pit of Sacrifice
+[Add] Chamber of the Dreamer
+[Add] Sanctum of the Fallen God
+[Add] Lair of the Chosen
+[Add] Hall of the Cursed
+
+------Uldaman------
+[Add] Hall of the Keepers
+[Add] Map Chamber
+[Add] Echomok Cavern
+[Add] Dig Three
+[Add] The Stone Vault
+[Add] Hall of the Crafters
+[Add] Khaz'goroth's Seat
+
+------Zul'Gurub------
+[Add] Alter of Hir'eel
+[Add] The Coil
+[Add] Zanza'a Rise
+[Add] Edge of Madness
+[Add] Hakkari Grounds
+[Add] Naze of Shirvallah
+[Add] Temple of Bethekk
+[Add] The Bloodfire Pit
+[Add] Alter of the Blood God
+
+------Magisters' Terrac------
+[Add] Grand Magister's Asylum
+[Add] Halls of Theory - North
+[Add] Halls of Theory - East
+[Add] Observation Grounds
+[Add] Observation Grounds - Lower
+[Add] Magisters' Terrace - Outside
+[Add] Magisters' Terrace - Lower
+[Add] The Assembly Chamber
+[Add] The Solar Vigil
+
+------Sunwell Plateau------
+[Add] Sunwell Plateau - Outside
+[Add] Parhelion Plaza
+[Add] Apex Point
+[Add] Den of Iniquity
+[Add] The Dead Scar
+
+------Blackfathom Deeps------
+[Add] The Drowned Sacellum
+[Add] The Pool of Ask'ar
+[Add] Moonshrine Ruins
+[Add] Moonshrine Sanctum
+[Add] Aku'mai's Lair
+
+------Dire Maul East------
+[Add] Warpwood Quarter
+[Add] The Hidden Reach
+[Add] The Conservatory
+[Add] The Shrine of Eldretharr
+
+------Dire Maul North------
+[Add] Halls of Destruction
+[Add] Gordok's Seat
+
+------Dire Maul West------
+[Add] Capital Gardens
+[Add] Court of the Highborne
+[Add] Prison of Immol'thar
+[Add] The Athenaeum
+
+------Maraudon------
+[Add] Foulspore Cavern
+[Add] The Noxious Hollow
+[Add] Poison Falls
+[Add] The Wicked Grotto
+[Add] Vyletongue Seat
+[Add] Earth Song Falls
+[Add] Zaetar's Grave
+
+------Razorfen Downs------
+[Add] Spiral of Thorns - Bottom
+[Add] Spiral of Thorns - Top
+[Add] The Callers' Chamber
+[Add] The Murder Pens
+[Add] The Bone Pile
+
+------The Ruins of Ahn'Qiraj------
+[Add] Scarab Terrace
+[Add] General's Terrace
+[Add] The Reservoir
+[Add] Watchers' Terrace
+[Add] The Comb
+[Add] The Hatchery
+
+------Wailing Caverns------
+[Add] Screaming Gully
+[Add] Dreamer's Rock
+[Add] Pit of Fangs
+[Add] Crag of the Everliving
+[Add] Winding Chasm
+
 8/03/2008 by necroblack
 ------Duskwood------
 [Fix] Darkshire
